--- a/protoApp/app/styles/main.scss
+++ b/protoApp/app/styles/main.scss
@@ -11,6 +11,15 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
   padding: 0.2em 0;
 }
 
+.textLeft {
+  text-align: left;
+}
+
+.textRight {
+  text-align: right;
+}
+
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
@@ -18,9 +27,5 @@ body {
 }
 
 
-/*  */
-.campaignSection {
-  width: 100%;
-  min-height: 20.0rem;
-}
+
 
